Fixed container font color and grid text size\alignment

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,3 +16,10 @@
 
 */
 
+.main{
+	float:left;
+}
+
+.sidebar{
+	float: right;
+}
